--- a/client/src/App.css
+++ b/client/src/App.css
@@ -90,13 +90,13 @@ body {
 }
 
 .masthead {
-  position: relative;
+  position: fixed;
   width: 100%;
   height: auto;
   min-height: 35rem;
   padding: 15rem 0;
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(22, 22, 22, 0.1)), color-stop(75%, rgba(22, 22, 22, 0.5)), to(#161616)), url("https://images.unsplash.com/photo-1535082049017-5a7b43f3bcef?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=2145e5837ba1a212ea9c9d719dbc9577&auto=format&fit=crop&w=500&q=60");
-  background: linear-gradient(to bottom, rgba(22, 22, 22, 0.1) 0%, rgba(22, 22, 22, 0.5) 75%, #161616 100%), url("https://images.unsplash.com/photo-1535082049017-5a7b43f3bcef?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=2145e5837ba1a212ea9c9d719dbc9577&auto=format&fit=crop&w=500&q=60");
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(22, 22, 22, 0.1)), color-stop(75%, rgba(22, 22, 22, 0.5)), to(#161616)), url("https://upload.wikimedia.org/wikipedia/commons/8/81/Saint_paul_mn.jpg");
+  background: linear-gradient(to bottom, rgba(22, 22, 22, 0.1) 0%, rgba(22, 22, 22, 0.5) 75%, #161616 100%), url("https://upload.wikimedia.org/wikipedia/commons/8/81/Saint_paul_mn.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
